Add Java 11 flags to Error Prone tests
PiperOrigin-RevId: 323427131