@@ -16,7 +16,9 @@
 
 package com.google.errorprone.bugpatterns;
 
+import com.google.common.collect.ImmutableList;
 import com.google.errorprone.BugCheckerRefactoringTestHelper;
+import com.google.errorprone.util.RuntimeVersion;
 import org.junit.Test;
 import org.junit.runner.RunWith;
 import org.junit.runners.JUnit4;
@@ -52,6 +54,12 @@ public class DescribeMatchTest {
             "    return describeMatch(tree, fix);",
             "  }",
             "}")
+        .setArgs(
+            RuntimeVersion.isAtLeast9()
+                ? ImmutableList.of(
+                    "--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
+                    "--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED")
+                : ImmutableList.of())
         .doTest();
   }
 
