@@ -16,6 +16,7 @@ package com.google.errorprone.bugpatterns;
 
 import com.google.common.collect.ImmutableList;
 import com.google.errorprone.CompilationTestHelper;
+import com.google.errorprone.util.RuntimeVersion;
 import org.junit.Test;
 import org.junit.runner.RunWith;
 import org.junit.runners.JUnit4;
@@ -283,6 +284,11 @@ public final class ProtoFieldNullComparisonTest {
             " return extensionList.build();",
             "}",
             "}")
+        .setArgs(
+            RuntimeVersion.isAtLeast9()
+                ? ImmutableList.of(
+                    "--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED")
+                : ImmutableList.of())
         .doTest();
   }
 
